--- a/src/style.css
+++ b/src/style.css
@@ -196,8 +196,20 @@ body {
 	cursor: pointer;
 }
 
-.color-black {
-	color: black;
+.like-1 {
+	color: rgb(104, 101, 101);
+	
+}
+.like-2 {
+	color: rgb(104, 101, 101);
+	font-weight: bold;
+	margin-left: 8px
+	
+}
+.letter-like-red{
+	color: red;
+	font-weight: bold;
+	margin-left: 8px
 }
 
 .post-list {
